chore: bump Java release to 17, replace Collectors.toList() with Stream.toList()
Update compiler release from 11 to 17. Replace Stream.collect(Collectors.toList())
with Stream.toList() in MultiTenantLookupDao and MultiTenantRelationalDao.
Collectors.toList() inside groupingBy downstream collectors is left unchanged.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>