@@ -141,7 +141,7 @@ public class MultiTenantLookupDao<T> implements ShardedDao<T> {
             final TransactionObserver observer) {
         this.sessionFactories = sessionFactories;
         sessionFactories.forEach((tenantId, factories) -> {
-            daos.put(tenantId, factories.stream().map(LookupDaoPriv::new).collect(Collectors.toList()));
+            daos.put(tenantId, factories.stream().map(LookupDaoPriv::new).toList());
         });
         this.entityClass = entityClass;
         this.shardCalculator = new ShardCalculator<>(shardManagers, new ConsistentHashBucketIdExtractor<>(shardManagers));
@@ -569,7 +569,7 @@ public class MultiTenantLookupDao<T> implements ShardedDao<T> {
                     } catch (Exception e) {
                         throw new RuntimeException(e);
                     }
-                }).flatMap(Collection::stream).collect(Collectors.toList());
+                }).flatMap(Collection::stream).toList();
     }
 
     /**
@@ -629,7 +629,7 @@ public class MultiTenantLookupDao<T> implements ShardedDao<T> {
                     } catch (Exception e) {
                         throw new RuntimeException(e);
                     }
-                }).flatMap(Collection::stream).collect(Collectors.toList());
+                }).flatMap(Collection::stream).toList();
     }
 
     /**
@@ -742,7 +742,7 @@ public class MultiTenantLookupDao<T> implements ShardedDao<T> {
                     } catch (Exception e) {
                         throw new RuntimeException(e);
                     }
-                }).collect(Collectors.toList());
+                }).toList();
     }
 
     /**
@@ -818,7 +818,7 @@ public class MultiTenantLookupDao<T> implements ShardedDao<T> {
             } catch (Exception e) {
                 throw new RuntimeException(e);
             }
-        }).flatMap(Collection::stream).collect(Collectors.toList());
+        }).flatMap(Collection::stream).toList();
     }
 
     /**
@@ -914,10 +914,10 @@ public class MultiTenantLookupDao<T> implements ShardedDao<T> {
     private ScrollExecutor<T> buildScrollExecutor(String tenantId) {
         val daoList = daos.get(tenantId);
         return new ScrollExecutor<>(
-                daoList.stream().map(dao -> dao.sessionFactory).collect(Collectors.toList()),
+                daoList.stream().map(dao -> dao.sessionFactory).toList(),
                 daoList.stream()
                         .map(dao -> (Function<SelectParam, List<T>>) dao::select)
-                        .collect(Collectors.toList()),
+                        .toList(),
                 transactionExecutor.get(tenantId),
                 entityClass);
     }
@@ -1006,7 +1006,7 @@ public class MultiTenantLookupDao<T> implements ShardedDao<T> {
                 })
                 .sorted(comparator)
                 .limit(pageSize)
-                .collect(Collectors.toList());
+                .toList();
         //This list will be of _pageSize_ long but max fetched might be _pageSize_ * numShards long
         val outputBuilder = ImmutableList.<T>builder();
         results.forEach(result -> {
